--- a/com.spart.msa_exam.auth/src/main/resources/application.yml
+++ b/com.spart.msa_exam.auth/src/main/resources/application.yml
@@ -1,6 +1,18 @@
 spring:
   application:
     name: auth-service
+  datasource:
+    url: jdbc:mysql://localhost:3306/msadb
+    username: root
+    password: password
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
 
 eureka:
   client:
