--- a/com.spart.msa_exam.product/src/main/resources/application.yml
+++ b/com.spart.msa_exam.product/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 19095
+  port: 19093
 
 spring:
   application:
-    name: auth-service
+    name: product-service
   profiles:
     active: dev
   datasource:
@@ -18,10 +18,10 @@ eureka:
     service-url:
       defaultZone: http://localhost:19090/eureka/
 
-service:
-  jwt:
-    access-expiration: 3600000
-
-
-
-
+management:
+  zipkin:
+    tracing:
+      endpoint: "http://localhost:9411/api/v2/spans"
+  tracing:
+    sampling:
+      probability: 1.0
