[order-fail] 주문 실패 완료 - Circuit Breaker 적용

--- a/com.spart.msa_exam.order/src/main/resources/application-prod.yml
+++ b/com.spart.msa_exam.order/src/main/resources/application-prod.yml
@@ -23,3 +23,12 @@ management:
   tracing:
     sampling:
       probability: ${TRACING_SAMPLING_PROBABILITY:0.1}
+
+resilience4j:
+  circuitbreaker:
+    configs:
+      default:
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 10
+        failureRateThreshold: 30
+        waitDurationInOpenState: 30s
