[cache] 주문 단건 조회에 캐시 적용하기 - Cache-Aside

--- a/com.spart.msa_exam.order/src/main/resources/application.yml
+++ b/com.spart.msa_exam.order/src/main/resources/application.yml
@@ -6,12 +6,20 @@ spring:
     name: order-service
   profiles:
     active: dev
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      username: default
+      password: systempass
 
 eureka:
   client:
