--- a/com.spart.msa_exam.order/build.gradle
+++ b/com.spart.msa_exam.order/build.gradle
@@ -30,7 +30,8 @@ dependencies {
 
     // circuit breaker
     implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
-
+    // redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'io.micrometer:micrometer-tracing-bridge-brave'
