--- a/com.spart.msa_exam.order/src/main/resources/application-prod.yml
+++ b/com.spart.msa_exam.order/src/main/resources/application-prod.yml
@@ -11,6 +11,13 @@ spring:
       ddl-auto: none
     show-sql: false
 
+  spring:
+    data:
+      redis:
+        host: ${REDIS_HOST}
+        port: 6379
+        password: ${REDIS_PASSWORD}
+
 eureka:
   client:
     service-url:
