[cache] 상품 목록 조회 캐시 적용 - Cache-Aside

--- a/com.spart.msa_exam.product/src/main/resources/application-prod.yml
+++ b/com.spart.msa_exam.product/src/main/resources/application-prod.yml
@@ -11,6 +11,12 @@ spring:
       ddl-auto: none
     show-sql: false
 
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: 6379
+      password: ${REDIS_PASSWORD}
+
 eureka:
   client:
     service-url:
