--- a/com.spart.msa_exam.product/src/main/resources/application.yml
+++ b/com.spart.msa_exam.product/src/main/resources/application.yml
@@ -13,6 +13,13 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      username: default
+      password: systempass
+
 eureka:
   client:
     service-url:
