[가중치 기반 로드밸런서 필터] .

--- a/com.spart.msa_exam.gateway/src/main/resources/application-dev.yml
+++ b/com.spart.msa_exam.gateway/src/main/resources/application-dev.yml
@@ -13,6 +13,8 @@ spring:
           uri: lb://product-service
           predicates:
             - Path=/products/**
+          filters:
+            - name: WeightedLoadBalancerFilter
         - id: auth-service
           uri: lb://auth-service
           predicates:
